# STB

./: .gitignore  AI編輯指南_SCHEMA.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: index.html  privacy.html
release/: README.md  STB_1.0.0_aarch64.dmg
src/: assignDialog.ts  callSheetView.ts  cropper.ts  cutPicker.ts  editKeys.ts  exportDialog.ts  ganttView.ts  help.html  helpDialog.ts  hubDialog.ts  logoAsset.ts  main.ts  model.ts  nameDialog.ts  pages.ts  persistence.ts  pointerDrag.ts  pptxNative.ts  previewMode.ts  refPageView.ts  releaseNotes.ts  rundownView.ts  sampleData.ts  sketchEditor.ts  stbView.ts  store.ts  style.css  touchUndo.ts  trimmer.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/helpers/: stb-trim.swift
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
