[package]
name = "app"
version = "1.3.0"
description = "STB — 為腳本與前製會議而生的 Mac App"
authors = ["Armin Kao"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
base64 = "0.22"
# 打包案子（.stb＝zip）：整案含素材壓成單檔，跨機交換
zip = { version = "2", default-features = false, features = ["deflate"] }

# iOS 分享面板（UIActivityViewController）＋原生照片選擇器（PHPicker）：
# objc2 動態呼叫、block2 給 ObjC 回呼用
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.5"
block2 = "0.5"
